v3.4.0
- Improved formatting slightly from my dumb ass when I was a kid and wrote this code
- Fixed outstanding issues with legacy code and deprecated methods
- Now built against the latest Paper API and Java 21